button spacing fix

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -28,6 +28,7 @@ img {
   padding: 15px;
   cursor: pointer;
   margin-left: 24px;
+  margin-top: 16px;
 }
 
 section,
