--- a/styles/style.css
+++ b/styles/style.css
@@ -372,6 +372,7 @@ img {
   padding: 15px;
   cursor: pointer;
   margin-left: 24px;
+  margin-top: 16px;
 }
 
 section,
